# qtutils

./: pyproject.toml
qtutils/: UiLoader.py  __init__.py  qt.py
qtutils/icons/: __init__.py
